--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="#">Link</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <!-- <form class="d-flex" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -45,16 +45,19 @@
             <button class="btn btn-outline-success" type="submit">
               Search
             </button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
-    <div
+    <section
       class="d-flex flex-column justify-content-center align-items-center p-5 pt-10"
     >
       <h1>Felipe Pineda Sepúlveda</h1>
       <h2>Ingeniero Civil Electrónico & Desarrollador Front-End</h2>
-    </div>
+    </section>
+    <section class="d-flex justify-content-center">
+      <h1>Página en desarrollo</h1>
+    </section>
     <!-- Script de bootstrap (SIEMPRE DEBE IR AL FINAL) -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
